src/objects/Client__c.object
<CustomObject>
    <fields>
        <fullName>Address_of_residence__c</fullName>
        <label>Address of residence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Count_Credits__c</fullName>
        <label>Count Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_name__c</fullName>
        <label>Last name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone_number__c</fullName>
        <label>Phone number</label>
        <type>Phone</type>
    </fields>
    <label>Client</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>